# winget-cli

./: .actrc  .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .vsconfig  Authors  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Clipe  Davi3031  Dk the boss  LICENSE.github.com.denominio  NOTICE  NOTICE.txt  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  ThirdPartyNotices.txt  WinGetInProcCom.nuspec  WinGetUtil.nuspec  azure-pipelines.coverage.yml  azure-pipelines.loc.yml  azure-pipelines.nuget.in-proc-com.yml  azure-pipelines.nuget.yml  azure-pipelines.yml  cgmanifest.json  package-lock.json  privacy.md  pure  read.txt  vcpkg.json  vuminhchien  windger
Release/tests/common/TestRunner/: CMakeLists.txt  test_module_loader.cpp  test_module_loader.h
Release/tests/common/UnitTestpp/: CMakeLists.txt  unittestpp.h
Release/tests/common/UnitTestpp/src/: CurrentTest.cpp  DeferredTestResult.h  GlobalSettings.cpp  GlobalSettings.h  ReportAssert.cpp  TestDetails.cpp  TestList.h  TestMacros.h  TestResults.cpp  TestRunner.h  XmlTestReporter.h  stdafx.h
Release/tests/common/utilities/: CMakeLists.txt
Release/tests/common/utilities/include/: common_utilities_public.h  os_utilities.h
Release/tests/functional/http/client/: CMakeLists.txt  authentication_tests.cpp  compression_tests.cpp  connection_pool_tests.cpp  http_client_fuzz_tests.cpp  http_client_tests.h  multiple_requests.cpp  oauth1_tests.cpp  oauth2_tests.cpp  proxy_tests.cpp  redirect_tests.cpp  request_stream_tests.cpp  request_uri_tests.cpp  timeout_handler.h  to_string_tests.cpp
Release/tests/functional/json/: CMakeLists.txt  construction_tests.cpp  iterator_tests.cpp  json_numbers_tests.cpp
Release/tests/functional/websockets/: CMakeLists.txt
Release/tests/functional/websockets/client/: close_tests.cpp  error_tests.cpp  send_msg_tests.cpp  stdafx.cpp  stdafx.h
Release/tests/functional/websockets/utilities/: test_websocket_server.cpp  test_websocket_server.h
src/SfsClient/sfs-client/client/: CMakeLists.txt
src/SfsClient/sfs-client/client/src/: AppFile.cpp  ApplicabilityDetails.cpp  Content.cpp  ContentId.cpp  File.cpp  Logging.cpp  Result.cpp  SFSClient.cpp
src/SfsClient/sfs-client/client/tests/: CMakeLists.txt
src/SfsClient/sfs-client/samples/integration-do-client/: CMakeLists.txt  IntegrationDOClient.cpp
src/SfsClient/sfs-client/samples/tool/: CMakeLists.txt  SFSClientTool.cpp
src/Valijson/valijson/: .clang-format  .gitignore  .gitmodules  .travis.yml  Authors  CMakeLists.txt  Doxyfile  LICENSE  README.md  bundle.sh  shellcheck.sh
src/Valijson/valijson/.github/workflows/: cifuzz.yml  cmake.yml
src/Valijson/valijson/cmake/: CMakeFindExtensions.cmake  CMakeHelpers.cmake  FindPoco.cmake
src/Valijson/valijson/doc/specifications/: draft-luff-json-hyper-schema-00.txt  draft-pbryan-zyp-json-ref-03.txt  draft-zyp-json-schema-03.txt  draft-zyp-json-schema-04.txt  rfc6901-json-pointer.txt
src/Valijson/valijson/examples/: array_iteration_basics.cpp  array_iteration_template_fn.cpp  boost_json_example.cpp  custom_schema.cpp  external_schema.cpp  json_pointers.cpp  picojson_format_test.cpp  remote_resolution.cpp  remote_resolution_local_file.cpp  remote_resolution_url.cpp  valijson_nlohmann_bundled.hpp  valijson_nlohmann_bundled_test.cpp
src/Valijson/valijson/include/compat/: optional.hpp
src/Valijson/valijson/include/valijson/: constraint_builder.hpp  exceptions.hpp  schema.hpp  schema_parser.hpp  subschema.hpp  validation_results.hpp  validation_visitor.hpp  validator.hpp
src/Valijson/valijson/inspector/: .gitignore  CMakeLists.txt  inspector.qrc
src/Valijson/valijson/inspector/cmake/: QtCommon.cmake  windows_metafile.rc.in
src/Valijson/valijson/inspector/res/: AppIcon.icns
src/Valijson/valijson/inspector/src/: main.cpp  window.cpp
src/Valijson/valijson/tests/: test_adapter_comparison.cpp  test_boost_json_adapter.cpp  test_fetch_absolute_uri_document_callback.cpp  test_fetch_document_callback.cpp  test_fetch_urn_document_callback.cpp  test_json11_adapter.cpp  test_json_pointer.cpp  test_jsoncpp_adapter.cpp  test_nlohmann_json_adapter.cpp  test_picojson_adapter.cpp  test_poco_json_adapter.cpp  test_poly_constraint.cpp  test_property_tree_adapter.cpp  test_qtjson_adapter.cpp  test_rapidjson_adapter.cpp  test_validation_errors.cpp  test_validator.cpp  test_yaml_cpp_adapter.cpp
src/Valijson/valijson/tests/fuzzing/: fuzzer.cpp  oss-fuzz-build.sh
src/Valijson/valijson/xcode/valijson.xcodeproj/: project.pbxproj
src/Xlang/UndockedRegFreeWinRT/samples/meta_reader/: CMakeLists.txt
src/Xlang/UndockedRegFreeWinRT/src/: CMakeLists.txt  CMakeSettings.json  readme.md
src/Xlang/UndockedRegFreeWinRT/src/UndockedRegFreeWinRT/: README.md  SignConfig.xml  UndockedRegFreeWinRT.sln
src/Xlang/UndockedRegFreeWinRT/src/package/: CMakeLists.txt
src/Xlang/UndockedRegFreeWinRT/src/platform/: CMakeLists.txt  activation_abi.cpp  cache_string.h  common_memory.cpp  heap_string.h  platform_activation.h  string_traits.h  win32_pal_internal.h  win32_string_convert.cpp
src/Xlang/UndockedRegFreeWinRT/src/scripts/: scorch.cmake
src/YamlCppLib/yaml-cpp/test/: CMakeLists.txt  create-emitter-tests.py  regex_test.cpp
src/YamlCppLib/yaml-cpp/util/: CMakeLists.txt
src/cpprestsdk/cpprestsdk/Release/: .gitignore  CMakeLists.txt
src/test/abi_component/: CMakeLists.txt  iwidget.h  module.def
src/test/cppx/: CMakeLists.txt  param_iterable.cpp  param_map.cpp  produce_vector.cpp
src/tool/abi/: CMakeLists.txt  SignConfig.xml  abi_writer.cpp  build.yaml  code_writers.h  main.cpp  metadata_cache.cpp  namespace_iterator.h  readme.md  sha1.h  types.cpp  versioning.h
src/tool/abi/strings/: constexpr_definitions.h  deprecated_header_start.h  enum_class.h  file_header.h  include_guard_start.h  ns_prefix_definitions.h  ns_prefix_never.h  optional_ns_prefix_definitions.h  optional_ns_prefix_end_definitions.h
src/tool/python/: CMakeLists.txt  code_writers.h  helpers.h  pch.h  settings.h  type_writers.h
src/tool/python/strings/: enter_function.cpp  pybase.h  setup.py
(+4648 files in other folders)
